fix layout bug in promotional modal

--- a/app/assets/stylesheets/components/_sweepstakes_promotional_modal.scss
+++ b/app/assets/stylesheets/components/_sweepstakes_promotional_modal.scss
@@ -80,7 +80,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 12px 0;
+    margin: 12px auto;
     width: 390px;
     color: $primary;
   }
